DataTransferService.java now parses data and converts to Employees